Fix alignment of theatre container's legend

--- a/src/containers/TheatreContainer/TheatreContainer.module.scss
+++ b/src/containers/TheatreContainer/TheatreContainer.module.scss
@@ -46,12 +46,14 @@
 			width: 100%;
 			display: flex;
 			gap: 0.5rem;
+			justify-content: center;
 		}
 
 		.box2 {
 			width: 100%;
 			display: flex;
 			gap: 0.5rem;
+			justify-content: center;
 		}
 
 		.seat {
@@ -91,6 +93,13 @@
 	.content {
 		.legend {
 			flex-direction: row;
+			.box1 {
+				justify-content: flex-end;
+			}
+
+			.box2 {
+				justify-content: flex-start;
+			}
 		}
 	}
 }
